# decanter-ai-sdk

./: .env.example  .gitignore  LICENSE  Makefile  README.md  exp.json  pyproject.toml  pytest.ini  setup.py  tox.ini  ts_exp.json
.github/workflows/: main.yml  pr.yml  publish.yml  push.yml  test.yml
data/: ts_train_missing.csv
decanter_ai_sdk/: __init__.py  client.py  decanter_client.py  experiment.py  model.py  non_blocking_client.py  prediction.py
decanter_ai_sdk/enums/: algorithms.py  data_types.py  evaluators.py  missing_value_handling.py  status.py  time_units.py
decanter_ai_sdk/web_api/: api.py  decanter_api.py  iid_testing_api.py  parser.py  testing_api.py  ts_testing_api.py
decanter_ai_sdk/web_api/data/: experiment.json  iid_exp.json  iid_predict.json  iid_test_table.json  iid_train_table.json  model_list.json  predict.json  table.json  table_info.json  table_list.json  ts_exp.json  ts_predict.json  ts_test_table.json  ts_train_table.json
docs/: Makefile
docs/source/: api.rst  conf.py  index.rst
docs/source/notes/: changelog.rst  contributing.rst  design.rst  example.rst
docs/source/user/: install.rst  intro.rst  quickstart.rst
examples/: auto_time_series_example.py  example.py  iid_example.py  jupyter_example.ipynb  jupyter_jobs_handle_example.ipynb  non_blocking_iid_example.py  non_blocking_ts_example.py  ts_example.py
examples/data/: train.csv  ts_test.csv
examples/data/ts_data/: iris_test.csv  iris_train.csv
src/decanter/core/: plot.py
src/decanter/core/core_api/: __init__.py  body_obj.py  model.py
src/decanter/core/enums/: algorithms.py  evaluators.py
src/decanter/core/extra/: __init__.py  const.py
src/decanter/core/jobs/: data_upload.py  experiment.py  predict_result.py  task.py
src/decanter_ai_core_sdk.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: conftest.py  iid_example.py  test_client.py  test_context.py  test_data.py  test_decanter_ai_sdk.py  test_demo1.py  test_experiment.py  test_mock_iid.py  test_mock_ts.py  test_predict_result.py  ts_example.py  ts_train.csv
tests/data/: test.csv  test.txt
tests/integration/: setup.py  test_iid_e2e.py  test_ts_e2e.py
tmp/: pred_res.csv
