[tool.poetry]
name = "decanter-ai-sdk"
version = "0.1.18"
description = "Decanter AI is a powerful AutoML tool which enables everyone to build ML models and make predictions without data science background. With Decanter AI SDK, you can integrate Decanter AI into your application more easily with Python."
homepage = "https://github.com/MoBagel/decanter-ai-sdk"
authors = ["senchao <senchao@mobagel.com>"]
readme = "README.md"
include = [
  "README.md"
]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.4.3"
requests-toolbelt = "^0.9.1"
tqdm = "^4.64.0"
pydantic = "^1.9.2"
urllib3 = "1.26.15"

[tool.poetry.group.dev.dependencies]
poethepoet = "^0.16.0"
black = "^22.6.0"
pytest = "^7.1.2"
pytest-xdist = "^2.5.0"
coveralls = "^3.3.1"
pytest-cov = "^3.0.0"
pynvim = "^0.4.3"
pytest-mock = "^3.10.0"
poetry = "1.4.2"
python-dotenv = "^1.0.0"
mypy = "^1.2.0"
types-requests = "<2.31.0.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poe.env]

SRC = "decanter_ai_sdk"
DIFF.default = ""
INPLACE.default = "--in-place"

[tool.poe.tasks]
_black = 'black $SRC $DIFF --color'
_mypy-install-type = 'mypy $SRC --ignore-missing-imports --install-types --non-interactive'
_mypy = 'mypy $SRC --ignore-missing-imports'

[tool.poe.tasks.test]
help = "Testing tasks."
shell = """
echo run unit tests
pytest -k 'not integration' --cov=$SRC --cov-report term-missing --ignore=integration
"""

[tool.poe.tasks.test-e2e]
help = "Functional testing on real Decanter AI endpoint"
shell = """
echo run functional tests
pytest -k 'integration' --cov=$SRC --cov-report term-missing --ignore=integration
"""

[tool.poe.tasks.lint]
help = "Lints the `decanter_ai_sdk` directory"
sequence = ["_mypy-install-type", "_mypy", "_black"]
env = { DIFF = "--diff", INPLACE = "" }

[tool.poe.tasks.format]
help = "Formatting"
shell = """
echo run a formatter
black ./decanter_ai_sdk
"""
